--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "images/sinopia"]
 	path = images/sinopia
 	url = https://github.com/nativecode-dev/sinopia-docker.git
+[submodule "images/teamcity"]
+	path = images/teamcity
+	url = https://github.com/nativecode-dev/teamcity-docker.git
+[submodule "images/teamcity-agent"]
+	path = images/teamcity-agent
+	url = https://github.com/nativecode-dev/teamcity-agent-docker.git
