--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -2,14 +2,26 @@ nginx-proxy:
   build: ../images/proxy
   container_name: proxy
   links:
+    - sinopia
     - teamcity
   ports:
     - 80:80
     - 443:443
   restart: always
   volumes:
-    - /var/opt/dev-services/certs:/etc/nginx/certs
+    - /var/opt/services/certs:/etc/nginx/certs
     - /var/run/docker.sock:/tmp/docker.sock:ro
+
+sinopia:
+  build: ../images/sinopia
+  container_name: sinopia
+  environment:
+    VIRTUAL_HOST: build.nativecode.com
+  ports:
+    - 4873:4873
+  restart: always
+  volumes:
+    - /var/opt/services/sinopia:/opt/sinopia  
 
 teamcity:
   build: ../images/teamcity
@@ -20,7 +32,7 @@ teamcity:
     - teamcity-data
   restart: always
   volumes:
-    - /var/opt/dev-services/teamcity:/var/lib/teamcity
+    - /var/opt/services/teamcity:/var/lib/teamcity
 
 teamcity-agent:
   build: ../images/teamcity-agent
@@ -40,4 +52,4 @@ teamcity-data:
     POSTGRES_USER: teamcity
   restart: always
   volumes:
-    - /var/opt/dev-services/teamcity-data:/teamcity
+    - /var/opt/services/teamcity-data:/teamcity
