changing submodule to ssh path

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "images/sinopia"]
 	path = images/sinopia
-	url = https://github.com/nativecode-dev/sinopia-docker.git
+  url = git@github.com:nativecode-dev/sinopia-docker.git
 [submodule "images/teamcity"]
 	path = images/teamcity
 	url = https://github.com/nativecode-dev/teamcity-docker.git
