--- a/images/sinopia/Dockerfile
+++ b/images/sinopia/Dockerfile
@@ -1,17 +1,23 @@
 FROM node:0.10.45
 MAINTAINER "Mike Pham (support@nativecode.com)"
 
-ENV SINOPIA_PREFIX="https://localhost"
+# Environment variables.
+ENV SINOPIA_PREFIX https://localhost
 
-RUN mkdir -p /data/conf;
-RUN mkdir -p /data/default;
-RUN mkdir -p /data/packages;
+# Run package installer first so rebuilding the image is faster.
+RUN npm install --global --prefix /opt/sinopia --production --silent sinopia > /dev/null
+RUN chown daemon:root -R /opt/sinopia ; chown daemon:root -R /data
+RUN ln -s /opt/sinopia/bin/sinopia /usr/local/bin/sinopia
 
-RUN npm install --global --prefix /data/sinopia --production --silent \
-  sinopia > /dev/null;
-
-RUN chown daemon:root /data -R;
-
-USER daemon
+# App contents.
+WORKDIR /opt/sinopia/conf.d
 ADD docker-entrypoint.sh /docker-entrypoint.sh
+ADD templates/config.yaml config.yaml
+ADD templates/.sinopia-db.json .sinopia-db.json
+
+# Expose ports and volumes.
+EXPOSE 4873
+VOLUME ["/data/sinopia"]
+
+# Run process.
 ENTRYPOINT ["/docker-entrypoint.sh"]
