--- a/images/wordpress/Dockerfile
+++ b/images/wordpress/Dockerfile
@@ -1,4 +1,6 @@
 FROM wordpress:latest
 RUN set -x \
-  docker-php-ext-install zip \
+  && docker-php-ext-install zip \
 ;
+
+ADD docker-entrypoint.sh /entrypoint.sh
