fixing agent build

--- a/images/teamcity-agent/Dockerfile
+++ b/images/teamcity-agent/Dockerfile
@@ -2,8 +2,6 @@
 FROM ubuntu:xenial
 MAINTAINER support@nativecode.com
 
-ENV NPM_REGISTRY=https://registry.npmjs.org/
-
 ##
 # Setup some environment variables we'll need later.
 #   GOSU_VERSION            version of gosu to install.
@@ -12,11 +10,12 @@ ENV NPM_REGISTRY=https://registry.npmjs.org/
 #   TEAMCITY_AGENT_PATH     root of the agent files.
 #   TEAMCITY_SERVER_URL     URL where the agent can contact TeamCity.
 ##
-ENV GOSU_VERSION            1.7
-ENV NODE_VERSION            4.4.4
-ENV NODE_NPM_VERSION        3.5.2
-ENV TEAMCITY_SERVER_PATH    http://localhost
-ENV TERM                    dumb
+ENV GOSU_VERSION                  1.7
+ENV NODE_NPM_VERSION              3.5.2
+ENV NODE_VERSION                  4.4.4
+ENV TEAMCITY_AGENT_NPM_REGISTRY   https://npm.nativecode.com/
+ENV TEAMCITY_SERVER_PATH          http://localhost
+ENV TERM                          dumb
 WORKDIR /data
 
 RUN set -x \
@@ -88,9 +87,8 @@ RUN set -x \
   && tar -xzf "node-v$NODE_VERSION-linux-x64.tar.gz" -C /usr/local --strip-components=1 \
   && rm "node-v$NODE_VERSION-linux-x64.tar.gz" SHASUMS256.txt.asc \
   # Install nodejs global dependencies.
-  && npm config set registry "$NPM_REGISTRY" \
-  && npm install --global \
-       "npm@$NPM_VERSION" \
+  && npm config set registry "$TEAMCITY_AGENT_NPM_REGISTRY" \
+  && npm install --global "npm@$NODE_NPM_VERSION" \
   && npm install --global \
       grunt-cli gulp-cli \
   && npm cache clear \
